; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_i2c.c_mlxsw_i2c_cmd_exec.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_i2c.c_mlxsw_i2c_cmd_exec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlxsw_i2c = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32, i32, i32, i8*, i64, i8*, i64, i32*)* @mlxsw_i2c_cmd_exec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mlxsw_i2c_cmd_exec(i8* %0, i32 %1, i32 %2, i32 %3, i32 %4, i8* %5, i64 %6, i8* %7, i64 %8, i32* %9) #0 {
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i8*, align 8
  %17 = alloca i64, align 8
  %18 = alloca i8*, align 8
  %19 = alloca i64, align 8
  %20 = alloca i32*, align 8
  %21 = alloca %struct.mlxsw_i2c*, align 8
  store i8* %0, i8** %11, align 8
  store i32 %1, i32* %12, align 4
  store i32 %2, i32* %13, align 4
  store i32 %3, i32* %14, align 4
  store i32 %4, i32* %15, align 4
  store i8* %5, i8** %16, align 8
  store i64 %6, i64* %17, align 8
  store i8* %7, i8** %18, align 8
  store i64 %8, i64* %19, align 8
  store i32* %9, i32** %20, align 8
  %22 = load i8*, i8** %11, align 8
  %23 = bitcast i8* %22 to %struct.mlxsw_i2c*
  store %struct.mlxsw_i2c* %23, %struct.mlxsw_i2c** %21, align 8
  %24 = load %struct.mlxsw_i2c*, %struct.mlxsw_i2c** %21, align 8
  %25 = getelementptr inbounds %struct.mlxsw_i2c, %struct.mlxsw_i2c* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load i32, i32* %12, align 4
  %28 = load i32, i32* %14, align 4
  %29 = load i64, i64* %17, align 8
  %30 = load i8*, i8** %16, align 8
  %31 = load i64, i64* %19, align 8
  %32 = load i8*, i8** %18, align 8
  %33 = load i32*, i32** %20, align 8
  %34 = call i32 @mlxsw_i2c_cmd(i32 %26, i32 %27, i32 %28, i64 %29, i8* %30, i64 %31, i8* %32, i32* %33)
  ret i32 %34
}

declare dso_local i32 @mlxsw_i2c_cmd(i32, i32, i32, i64, i8*, i64, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
